Fix: home page about and wwd spacing clash, font-size

--- a/src/components/About/styles/AboutDesktop.css
+++ b/src/components/About/styles/AboutDesktop.css
@@ -1,16 +1,13 @@
-#about-page{
-  background-color:#08707f;
+#about-page {
+  background-color: #08707f;
   /* background-image: url("../wave6.svg"); */
   background-position: center;
   background-size: cover;
 }
 .yipnav .active {
-  filter:drop-shadow(3px 4px 4px #0e0e0e);  
+  filter: drop-shadow(3px 4px 4px #0e0e0e);
 }
 @media screen and (min-width: 1025px) {
-  .about-us-outer{
-      max-height: 100vh;
-  }
   .about-grid {
     display: flex;
     flex-direction: column;
@@ -21,13 +18,13 @@
     text-align: center;
     /* margin-bottom: 3rem; */
   }
-  
-  .about-us h3{
+
+  .about-us h3 {
     font-size: 3rem;
     font-weight: 800;
     padding: 1.2rem 0;
     color: lavender;
-    margin-bottom: 4rem;
+    margin-bottom: 2rem;
   }
   .about-us-text {
     text-align: center;
@@ -40,21 +37,20 @@
   .about-us-text p {
     font-size: max(1.5rem, 100%);
     padding: 0 2rem;
-    font-family: Raleway,sans-serif;
-    color:white;
+    font-family: Raleway, sans-serif;
+    color: white;
     font-weight: 500;
     text-align: justify;
-    margin-bottom: 4rem;
   }
 
-  .about-us-container{
+  .about-us-container {
     max-width: 1240px;
     margin-bottom: 4rem;
     display: flex;
     flex-direction: column;
   }
 
-  .yip-stats-container{
+  .yip-stats-container {
     width: 100%;
     display: flex;
     align-items: center;
@@ -73,7 +69,7 @@
     justify-content: center;
     align-items: center;
   }
-  
+
   .yipnav {
     border-color: none;
     border: hidden;
@@ -95,7 +91,7 @@
     background-color: lightblue;
     color: #08707f;
     margin: auto;
-    font-size:1.5rem;
+    font-size: 1.5rem;
   }
   .yipstats-heading {
     font-size: 3rem;
@@ -126,10 +122,10 @@
     backdrop-filter: blur(0px);
     border-radius: 5px;
   }
-  .count-card{
-      padding:1rem;
+  .count-card {
+    padding: 1rem;
   }
-  
+
   .tab-space {
     background-color: none;
   }
