--- a/src/components/About/styles/AboutMobile.css
+++ b/src/components/About/styles/AboutMobile.css
@@ -1,146 +1,153 @@
-
 @media screen and (max-width: 1024px) {
-  .about-us-outer{
+  .about-us-outer {
     height: auto;
-}
-.about-grid {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-}
-.about-us {
-  text-align: center;
-  margin-top:-50px;
-}
-.about-us h1 {
-  font-size: 3rem;
-  font-weight: 700;
-  color: lavender;
-}
-.about-us-text {
-  text-align: center;
-  color: #262626;
-  font-weight: 500;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-.about-us-text p {
-  font-size: max(1rem, 100%);
-  padding: 0 2rem;
-  font-family: Raleway,sans-serif;
-  color:white;
-  font-weight: 500;
-  text-align: justify;
+  }
+  .about-grid {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+  }
+  .about-us {
+    text-align: center;
+    margin-top: -50px;
+  }
+  .about-us h3 {
+    font-size: 3rem;
+    font-weight: 700;
+    color: lavender;
+  }
+  .about-us-text {
+    text-align: center;
+    color: #262626;
+    font-weight: 500;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+  .about-us-text p {
+    font-size: max(1rem, 100%);
+    padding: 0 2rem;
+    font-family: Raleway, sans-serif;
+    color: white;
+    font-weight: 500;
+    text-align: justify;
+  }
+
+  .about-us-container {
+    max-width: 1240px;
+    margin-bottom: 2rem;
+    display: flex;
+    flex-direction: column;
+    /* border-bottom: 1px solid white; */
+  }
+
+  .yip-stats-container {
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin-bottom: 1rem;
+  }
+  .yipstats {
+    border: hidden;
+    text-align: center;
+    height: auto;
+    width: 100%;
+    max-width: 1240px;
+    padding: 5rem 10rem;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+  }
+
+  .yipnav {
+    border-color: none;
+    border: hidden;
+    justify-content: center;
+    align-items: center;
+    border-radius: 30px;
+    padding-bottom: 1rem;
+    border-bottom: 0.5px solid rgb(214, 211, 211);
+  }
+  .yip-button {
+    border: hidden !important;
+    background-color: lightblue !important;
+    border-radius: 20px !important;
+    margin: 1rem;
+  }
+
+  .text-success {
+    font-weight: 800;
+  }
+  .text-success p {
+    background-color: lightblue;
+    color: #08707f;
+    margin: auto;
+    font-size: 1rem;
+  }
+  .yipstats-heading {
+    font-size: 3rem;
+    font-weight: 800;
+    padding: 1.2rem 0;
+    color: lavender;
+  }
+
+  .h1-seo {
+    font-size: 2rem;
+    column-gap: 0;
+    font-weight: 900;
+    color: lavender;
+  }
+  .yipcardbody {
+    padding-top: 3vw;
+    /* border-bottom: 1px solid white; */
+  }
+  .yipcard {
+    background-color: transparent;
+    backdrop-filter: blur(0px);
+    border-radius: 5px;
+  }
+  .count-card {
+    padding: 0.5rem;
+  }
+
+  .tab-space {
+    background-color: none;
+  }
+  .count-title {
+    font-family: "Raleway", sans-serif;
+    color: white;
+    font-size: max(1.3vw, 1rem);
+    font-weight: 700;
+  }
+  .nav-tabs {
+    border: none !important;
+  }
 }
 
-.about-us-container{
-  max-width: 1240px;
-  margin-bottom: 2rem;
-  display: flex;
-  flex-direction: column;
-  /* border-bottom: 1px solid white; */
-}
-
-.yip-stats-container{
-  width: 100%;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  margin-bottom: 1rem;
-}
-.yipstats {
-  border: hidden;
-  text-align: center;
-  height: auto;
-  width: 100%;
-  max-width: 1240px;
-  padding: 5rem 10rem;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-}
-
-.yipnav {
-  border-color: none;
-  border: hidden;
-  justify-content: center;
-  align-items: center;
-  border-radius: 30px;
-}
-.yip-button {
-  border: hidden !important;
-  background-color: lightblue !important;
-  border-radius: 20px !important;
-  margin: 1em !important;
-}
-
-.text-success {
-  font-weight: 800;
-}
-.text-success p {
-  background-color: lightblue;
-  color: #08707f;
-  margin: auto;
-  font-size:1.5rem;
-}
-.yipstats-heading {
-  font-size: 3rem;
-  font-weight: 800;
-  padding: 1.2rem 0;
-  color: lavender;
-}
-
-.h1-seo {
-  font-size: 3rem;
-  column-gap: 0;
-  font-weight: 900;
-  color: lavender;
-}
-.yipcardbody {
-  padding-top: 3vw;
-  /* border-bottom: 1px solid white; */
-}
-.yipcard {
-  background-color: transparent;
-  backdrop-filter: blur(0px);
-  border-radius: 5px;
-}
-.count-card{
-    padding:1rem;
-}
-
-.tab-space {
-  background-color: none;
-}
-.count-title {
-  font-family:'Raleway',sans-serif;
-  color: white;
-  font-size: max(1.3vw, 1rem);
-  font-weight: 700;
-}
-}
-
-@media only screen and (max-width: 600px) {
-  .about-us h1{
-    font-size: 30px;
+@media only screen and (width< 576px) {
+  .about-us h3 {
+    font-size: 2rem !important;
     margin: 30px 0 15px 0;
   }
-  .yipstats-heading{
-    font-size: 30px;
+  .yipstats-heading {
+    font-size: 1.5rem;
     padding-top: 0;
   }
-  .yipstats{
+  .yipstats {
     padding: 20px;
   }
-  .yipitems{
+  .yipitems {
     display: flex;
     justify-content: space-around;
     flex-wrap: wrap;
   }
   .count-card span {
     font-size: 30px;
+  }
+  .yip-button {
+    margin: 0.5rem;
   }
 }
