--- a/src/components/Gallery/gallery.css
+++ b/src/components/Gallery/gallery.css
@@ -1,58 +1,59 @@
-.gallery-page{
-    align-content: center;
-    justify-content: center;
-    /* padding:60px 0 0 0; */
-    width:100vw;
-    padding-top: 10px;
-   /* padding-bottom: 0; */
-   /* background-color: #08707f; */
-   /* background-image: url("./SVG/wave6.svg") ; */
-   background-position: center  ;
-   background-size: cover;
+.gallery-page {
+  align-content: center;
+  justify-content: center;
+  /* padding:60px 0 0 0; */
+  width: 100vw;
+  padding-top: 10px;
+  /* padding-bottom: 0; */
+  /* background-color: #08707f; */
+  /* background-image: url("./SVG/wave6.svg") ; */
+  background-position: center;
+  background-size: cover;
 }
-#gallery{
-    background-color: #08707f;
-    /* padding-bottom:20px; */
+#gallery {
+  background-color: #08707f;
+  /* padding-bottom:20px; */
 }
 .gallery-title {
-    text-align: center;
-    color:lavender;
-    font-size: 3rem;
-    font-weight: 800;
-    /* padding: 3rem 0; */
-    /* margin-bottom: 2rem; */
-    padding-top: 4rem;
+  text-align: center;
+  color: lavender;
+  font-size: 3rem;
+  font-weight: 700;
+  /* padding: 3rem 0; */
+  /* margin-bottom: 2rem; */
+  /* padding-top: 4rem; */
 }
 
 .gallery-slides {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-  }
-  
-.image-gallery-slide img {
-    border: 5px solid #08707f; 
-    border-radius: 15px; 
-    box-shadow: 0px 8px 20px rgba(0, 0, 0, 0.2); 
-    transition: transform 0.3s ease-in-out, box-shadow 0.3s ease-in-out;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
-  .image-gallery-image {
-    scale:0.8;
-  }
+.image-gallery-slide img {
+  border: 5px solid #08707f;
+  border-radius: 15px;
+  box-shadow: 0px 8px 20px rgba(0, 0, 0, 0.2);
+  transition: transform 0.3s ease-in-out, box-shadow 0.3s ease-in-out;
+}
 
-@media screen and (max-width: 600px) {
-    .gallery-title {
-        font-size: 30px;
-        padding: 10px ;
-    }    
-    .image-gallery-bullets{
-        transform: translateY(25px);
-    }
-    .image-gallery-play-button, .image-gallery-fullscreen-button  {
-        transform: translateY(20px);
-    }
-    .gallery-slides{
-        margin-top: 0 !important;
-    }
+.image-gallery-image {
+  scale: 0.8;
+}
+
+@media screen and (width < 576px) {
+  .gallery-title {
+    font-size: 2rem;
+    padding: 10px;
+  }
+  .image-gallery-bullets {
+    transform: translateY(25px);
+  }
+  .image-gallery-play-button,
+  .image-gallery-fullscreen-button {
+    transform: translateY(20px);
+  }
+  .gallery-slides {
+    margin-top: 0 !important;
+  }
 }
