--- a/src/components/WhatWeDo/Wwd.css
+++ b/src/components/WhatWeDo/Wwd.css
@@ -2,17 +2,16 @@
   font-family: "Raleway", sans-serif;
   text-align: center;
   background-color: #08707f;
-  padding-top: 70px;
+  padding: 1rem 0 4rem 0;
+  /* margin-bottom: 2rem; */
 }
 
 .wwd-title {
-  font-size: 3rem;
-  font-weight: 800;
+  font-size: 3rem !important;
+  font-weight: 700;
   padding: 1.2rem 0;
   color: lavender;
-  margin-bottom: 4rem;
-  padding-top: 6rem;
-  /* margin-top: 4rem; */
+  margin-bottom: 2rem;
 }
 
 .wwd-column {
@@ -25,7 +24,7 @@
 }
 
 .wwd-card {
-  width: 100%; 
+  width: 100%;
   max-width: 650px;
   background: white;
   padding: 25px;
@@ -89,13 +88,13 @@
   }
 }
 
-@media (max-width: 768px) {
+@media (width< 576px) {
   .wwd-title {
-    font-size: 3.5rem;
+    font-size: 2rem !important;
   }
 
   .wwd-column {
-    grid-template-columns: 1fr; 
+    grid-template-columns: 1fr;
     max-width: 90%;
   }
 
@@ -107,15 +106,11 @@
 }
 
 @media (max-width: 480px) {
-  .wwd-title {
-    font-size: 3rem;
-  }
-
   .wwd-text {
-    font-size: 1.6rem;
+    font-size: 2rem;
   }
 
   .wwd-description {
-    font-size: 1.2rem;
+    font-size: 1rem;
   }
 }
